--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                         <i class="fi fi-br-settings-sliders"></i>
                     </button>
                     <button class="lock-color">
+                        <i class="fi fi-sr-unlock"></i>
                         <!---->
                     </button>
                 </div>
@@ -250,7 +251,7 @@
                 <p>Randomize</p>
             </div>
             <div class="save-panel">
-                <button class="randomize">
+                <button class="save">
                     <i class="fi fi-sr-bookmark"></i>
                 </button>
                 <p>Save</p>
@@ -266,8 +267,11 @@
                 <button class="close-save-popup">
                     <i class="fi fi-sr-cross-circle"></i>
                 </button>
-                <h4>Palette Name</h4>
-                <input type="text" maxlength="35" class="palette-name">
+                <h4>Enter Palette Name </h4>
+                <input type="text" maxlength="35" class="pallete-name" placeholder="It's Optional">
+                <button type="submit" class="submit-save">
+                    Save Pallete
+                </button>
             </div>
         </div>
 
@@ -276,7 +280,62 @@
                 <button class="close-library">
                     <i class="fi fi-sr-cross-circle"></i>
                 </button>
-                <h4>Pick A Palette</h4>
+                <h4>Pick A Palette 👇👇</h4>
+            </div>
+            <div class="pallets-con">
+                <div class="pallete-item">
+                    <div class="pallete-content">
+                        <div class="preview">
+                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
+                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
+                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
+                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
+                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
+                            </span>
+                        </div>
+                        <h4>Great GB Colours</h4>
+                    </div>
+                </div>
+                <div class="pallete-item">
+                    <div class="pallete-content">
+                        <div class="preview">
+                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
+                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
+                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
+                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
+                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
+                            </span>
+                        </div>
+                        <h4>Aussie Vibe</h4>
+                    </div>
+                </div>
+                <div class="pallete-item">
+                    <div class="pallete-content">
+                        <div class="preview">
+                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
+                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
+                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
+                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
+                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
+                            </span>
+                        </div>
+                        <h4>Starter</h4>
+                    </div>
+                </div>
+                <div class="pallete-item">
+                    <div class="pallete-content">
+                        <div class="preview">
+                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
+                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
+                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
+                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
+                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
+                            </span>
+                        </div>
+                        <h4>Random Palette</h4>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
