local storage - chck

--- a/index.html
+++ b/index.html
@@ -280,10 +280,13 @@
                 <button class="close-library">
                     <i class="fi fi-sr-cross-circle"></i>
                 </button>
-                <h4>Pick A Palette 👇👇</h4>
+                <h4>Click A Palette 👇</h4>
+            </div>
+            <div class="btn-con">
+                <button class="clear-pallete">Clear Palettes<i class="fi fi-sr-trash"></i></button>
             </div>
             <div class="pallets-con">
-                <div class="pallete-item">
+                <div class="pallete-item default-pallete">
                     <div class="pallete-content">
                         <div class="preview">
                             <span class="color-div" style="background-color: rgb(188, 74, 86);">
@@ -293,46 +296,7 @@
                             </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
                             </span>
                         </div>
-                        <h4>Great GB Colours</h4>
-                    </div>
-                </div>
-                <div class="pallete-item">
-                    <div class="pallete-content">
-                        <div class="preview">
-                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
-                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
-                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
-                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
-                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
-                            </span>
-                        </div>
-                        <h4>Aussie Vibe</h4>
-                    </div>
-                </div>
-                <div class="pallete-item">
-                    <div class="pallete-content">
-                        <div class="preview">
-                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
-                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
-                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
-                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
-                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
-                            </span>
-                        </div>
-                        <h4>Starter</h4>
-                    </div>
-                </div>
-                <div class="pallete-item">
-                    <div class="pallete-content">
-                        <div class="preview">
-                            <span class="color-div" style="background-color: rgb(188, 74, 86);">
-                            </span><span class="color-div" style="background-color: rgb(98, 189, 176);">
-                            </span><span class="color-div" style="background-color: rgb(133, 213, 5);">
-                            </span><span class="color-div" style="background-color: rgb(45, 78, 117);">
-                            </span><span class="color-div" style="background-color: rgb(79, 175, 178);">
-                            </span>
-                        </div>
-                        <h4>Random Palette</h4>
+                        <h4>Great GB Colours <i class="fi fi-sr-lock"></i></h4>
                     </div>
                 </div>
 
