--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <button class="color-library">
                     <i class="fi fi-sr-palette"></i>
                 </button>
-                <p>Pallete</p>
+                <p>Palletes</p>
             </div>
             <div class="generate-panel">
                 <button class="generate">
